--- a/requirements.txt
+++ b/requirements.txt
@@ -1,89 +1,59 @@
-altair==4.1.0
-argon2-cffi==20.1.0
-astor==0.8.1
-async-generator==1.10
-attrs==21.2.0
-backcall==0.2.0
-base58==2.1.0
-bleach==3.3.1
-blinker==1.4
-cachetools==4.2.2
-certifi==2021.5.30
-cffi==1.14.6
-charset-normalizer==2.0.3
-click==7.1.2
-debugpy==1.4.1
-decorator==5.0.9
-defusedxml==0.7.1
-entrypoints==0.3
-flatbuffers==2.0
-gitdb==4.0.7
-GitPython==3.1.18
-idna==3.2
+altair==5.0.1
+attrs==23.1.0
+blinker==1.6.2
+cachetools==5.3.1
+certifi==2023.5.7
+charset-normalizer==3.1.0
+click==8.1.3
+coloredlogs==15.0.1
+decorator==5.1.1
+flatbuffers==23.5.26
+gitdb==4.0.10
+GitPython==3.1.31
+humanfriendly==10.0
+idna==3.4
+importlib-metadata==6.6.0
 imutils==0.5.4
-ipykernel==6.0.3
-ipython==7.25.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-jedi==0.18.0
-Jinja2==3.0.1
-joblib==1.0.1
-jsonschema==3.2.0
-jupyter-client==6.1.12
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-MarkupSafe==2.0.1
-matplotlib-inline==0.1.2
-mistune==0.8.4
-nbclient==0.5.3
-nbconvert==6.1.0
-nbformat==5.1.3
-nest-asyncio==1.5.1
-notebook==6.4.0
-numpy==1.21.1
+Jinja2==3.1.2
+joblib==1.2.0
+jsonschema==4.17.3
+markdown-it-py==2.2.0
+MarkupSafe==2.1.3
+mdurl==0.1.2
+mpmath==1.3.0
+numpy==1.24.3
 onnxruntime==1.15.0
-opencv-python-headless==4.5.3.56
-packaging==21.0
-pandas==1.3.1
-pandocfilters==1.4.3
-parso==0.8.2
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.3.1
-plotly==5.1.0
-prometheus-client==0.11.0
-prompt-toolkit==3.0.19
-protobuf==3.17.3
-ptyprocess==0.7.0
-pyarrow==5.0.0
-pycparser==2.20
-pydeck==0.6.2
-Pygments==2.9.0
-pyparsing==2.4.7
-pyrsistent==0.18.0
+opencv-python==4.7.0.72
+packaging==23.1
+pandas==2.0.2
+patsy==0.5.3
+Pillow==9.5.0
+plotly==5.15.0
+plotly-express==0.4.1
+protobuf==4.23.2
+pyarrow==12.0.0
+pydeck==0.8.1b0
+Pygments==2.15.1
+Pympler==1.0.1
+pyrsistent==0.19.3
 python-dateutil==2.8.2
-pytz==2021.1
-pyzmq==22.1.0
-requests==2.26.0
-scikit-learn==0.24.1
-scipy==1.7.0
-Send2Trash==1.7.1
+pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
+requests==2.31.0
+rich==13.4.1
+scipy==1.10.1
 six==1.16.0
-smmap==4.0.0
-streamlit==0.85.1
-tenacity==8.0.1
-terminado==0.10.1
-testpath==0.5.0
-threadpoolctl==2.2.0
+smmap==5.0.0
+statsmodels==0.14.0
+streamlit==1.23.1
+sympy==1.12
+tenacity==8.2.2
 toml==0.10.2
-toolz==0.11.1
-tornado==6.1
-traitlets==5.0.5
-tzlocal==2.1
-urllib3==1.26.6
-validators==0.18.2
-watchdog==2.1.3
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.5.1
+toolz==0.12.0
+tornado==6.3.2
+typing_extensions==4.6.3
+tzdata==2023.3
+tzlocal==4.3
+urllib3==2.0.3
+validators==0.20.0
+zipp==3.15.0
